# enigma

./: README.md
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: main.rs  punch.rs  solve.rs
common/src/: lib.rs
docker/: Dockerfile_backend  build.sh  docker-compose.yml
frontend/: Cargo.toml  Trunk.toml  index.html  styles.scss
frontend/src/: app.rs  counting.rs  main.rs
frontend/src/pages/: configuration.rs  home.rs  logs.rs  mod.rs  reflector.rs  rotors.rs
